--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Creative Speed Checker</title>
+  <title>Axios Http Speed Checker</title>
 
   <style>
     body {
@@ -19,7 +19,7 @@
 <body>
 
   <div>
-    <h1>Creatives</h1>
+    <h1>Axios Http Speed Checker</h1>
     <ul>
 
     </ul>
